[gd_scene load_steps=3 format=3 uid="uid://dbp45oypqa0ct"]

[ext_resource type="Script" uid="uid://cpsx2f6uac5ab" path="res://scripts/rooms/intro.gd" id="1_a66g0"]
[ext_resource type="Theme" uid="uid://p0hn422nuqnl" path="res://themes/statement_item.tres" id="2_0f8wm"]

[node name="EndLetter" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a66g0")
game_scene = "res://scenes/global/main.tscn"
is_ending = true

[node name="BG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 512
theme_override_constants/margin_right = 512

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/MarginContainer"]
layout_mode = 2

[node name="PaddingTop" type="ColorRect" parent="ScrollContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 256)
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="LetterColor" type="ColorRect" parent="ScrollContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 250)
layout_mode = 2
color = Color(0.7105664, 0.65066594, 0.6035094, 1)

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer/MarginContainer/VBoxContainer/LetterColor"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_right = 32

[node name="Label" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/LetterColor/MarginContainer"]
custom_minimum_size = Vector2(512, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_0f8wm")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "
I hereby confess to the theft of the ancient artifact known as the Iridium Chicken, and to orchestrating the theft of the artifact known as the Encrusted Egg, by means of psychological manipulation through supernatural forces. Feel free to pass any sentence down onto me, but donâ€™t expect me to be around to serve it!

Former Conservator Nihil Vox
"
autowrap_mode = 3

[node name="PaddingBottom" type="ColorRect" parent="ScrollContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 256)
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="ContinueButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1554.0
offset_top = 988.0
offset_right = 1729.0
offset_bottom = 1041.0
theme_override_font_sizes/font_size = 32
text = "End..."

[node name="FadeRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[connection signal="pressed" from="ContinueButton" to="." method="_on_continue_button_pressed"]
